PR 56310: avoid assert() failures (or crashes) when the runtime addition of a wedge fails (for whatever reasons).